feat(backend): integrate JWKS client and add infrastructure improvements
- Initialize JWKS client on application startup
- Configure CORS middleware with dynamic origins from config
- Add structured logging with request tracing
- Update dependencies: python-jose, httpx for JWT verification
- Add startup script for easy development server launch
- Improve error handling and logging throughout application

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,9 +32,11 @@ postgrest==2.22.0
 propcache==0.4.1
 pycparser==2.23
 pydantic==2.12.2
+pydantic-settings==2.2.1
 pydantic_core==2.41.4
 PyJWT==2.10.1
 python-dotenv==1.1.1
+python-jose==3.3.0
 PyYAML==6.0.3
 realtime==2.22.0
 requests==2.32.5
